# ai-kanban

./: .gitignore  .impeccable.md  LICENSE  README.md  ai-kanban.service  analytics_page.md  install.sh  logs.sh  rotate_log.py  spec.md  start.sh  stop.sh
backend/: .gitignore  Cargo.toml  tarpaulin.toml
backend/.sqlx/: query-01a9938c5a090d522524db926284c92551600b9b0f53b670de124136b059fd2a.json  query-047fdfe911ad263e84acdf4018717c95da95e0179cc81b005adc28076e6fd910.json  query-225cfc2bfeee526e3c0e22ebb19024f965be9c6ee4c6df27fe20d66a2dbf6ab0.json  query-544ce253b536ab4f22b108f653e03dcb6206f73ab8ae7f2e2975403f61dad43a.json  query-7e314d3527264d3fb10c0da5756286fb4b332bd7d4794e0cf3de220e21dfdc1f.json  query-a034599194e2cbd040f020ec84ed2c5f337e93a7640bfbde5fec8112412e27d9.json  query-b8fdea5d2dd5df7c68ced05bef8a03fd96209d2d41f092595f205410965b1dfc.json
backend/migrations/: 001_initial.sql  002_logs.sql  003_add_context.sql  004_add_comments.sql  005_token_analytics.sql  006_claude_session_id.sql  007_otel_metrics.sql  008_backfill_otel_session_ids.sql  009_backfill_otel_task_ids.sql  010_feature_flags.sql  011_token_cache_columns.sql  012_otel_logs.sql  013_task_instructions.sql  014_cleanup_result_events.sql  015_task_attachments.sql  016_session_peak_tokens.sql
backend/src/: api.rs  db.rs  lib.rs  main.rs  metrics.rs  models.rs  static_files.rs
backend/tests/: analytics_extended_test.rs  analytics_test.rs  api_test.rs  attachment_api_test.rs  attachment_db_test.rs  comment_test.rs  context_file_test.rs  context_manager_test.rs  integration_test.rs  jsonl_parser_test.rs  litellm_test.rs  log_test.rs  logging_layer_test.rs  logging_test.rs  (+9 more)
(+244 files in other folders)
